mtrancid, mikrotik.pm: convert mikrotik to module

--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,6 @@ login_top
 mrancid
 mrvlogin
 mtlogin
-mtrancid
 nlogin
 noklogin
 nrancid
@@ -135,6 +134,7 @@ nxos.pm
 panos.pm
 rancid.pm
 rancid.py
+routeros.pm
 rbt.pm
 smc.pm
 sros.pm
