--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -101,10 +101,9 @@ CONFIG_CLEAN_FILES = login_top a10login agmrancid alogin arancid \
 	anlogin avologin avorancid blogin brancid brlogin cat5rancid \
 	clogin csblogin cssrancid dllogin elogin erancid f5rancid \
 	flogin fnlogin fxlogin hlogin htlogin htrancid jlogin jerancid \
-	mrancid mrvlogin mtrancid mtlogin nlogin nrancid noklogin \
-	nslogin nsrancid panlogin rblogin rivlogin rivrancid rrancid \
-	rtftpcopy tlogin trancid xilogin xirancid xlogin ulogin wlogin \
-	zrancid
+	mrancid mrvlogin mtlogin nlogin nrancid noklogin nslogin \
+	nsrancid panlogin rblogin rivlogin rivrancid rrancid rtftpcopy \
+	tlogin trancid xilogin xirancid xlogin ulogin wlogin zrancid
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
@@ -210,15 +209,15 @@ am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/a10login.in \
 	$(srcdir)/htrancid.in $(srcdir)/jerancid.in \
 	$(srcdir)/jlogin.in $(srcdir)/login_top.in \
 	$(srcdir)/mrancid.in $(srcdir)/mrvlogin.in \
-	$(srcdir)/mtlogin.in $(srcdir)/mtrancid.in $(srcdir)/nlogin.in \
-	$(srcdir)/noklogin.in $(srcdir)/nrancid.in \
-	$(srcdir)/nslogin.in $(srcdir)/nsrancid.in \
-	$(srcdir)/panlogin.in $(srcdir)/rblogin.in \
-	$(srcdir)/rivlogin.in $(srcdir)/rivrancid.in \
-	$(srcdir)/rrancid.in $(srcdir)/rtftpcopy.in \
-	$(srcdir)/tlogin.in $(srcdir)/trancid.in $(srcdir)/ulogin.in \
-	$(srcdir)/wlogin.in $(srcdir)/xilogin.in $(srcdir)/xirancid.in \
-	$(srcdir)/xlogin.in $(srcdir)/zrancid.in $(top_srcdir)/depcomp \
+	$(srcdir)/mtlogin.in $(srcdir)/nlogin.in $(srcdir)/noklogin.in \
+	$(srcdir)/nrancid.in $(srcdir)/nslogin.in \
+	$(srcdir)/nsrancid.in $(srcdir)/panlogin.in \
+	$(srcdir)/rblogin.in $(srcdir)/rivlogin.in \
+	$(srcdir)/rivrancid.in $(srcdir)/rrancid.in \
+	$(srcdir)/rtftpcopy.in $(srcdir)/tlogin.in \
+	$(srcdir)/trancid.in $(srcdir)/ulogin.in $(srcdir)/wlogin.in \
+	$(srcdir)/xilogin.in $(srcdir)/xirancid.in $(srcdir)/xlogin.in \
+	$(srcdir)/zrancid.in $(top_srcdir)/depcomp \
 	$(top_srcdir)/mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
@@ -355,10 +354,10 @@ bin_SCRIPTS = a10login alogin agmrancid anlogin arancid avologin \
 	avorancid blogin brancid brlogin cat5rancid clogin \
 	control_rancid csblogin cssrancid dllogin elogin erancid \
 	f5rancid flogin fnlogin fxlogin hlogin hrancid htlogin \
-	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
-	nlogin noklogin nrancid nslogin nsrancid panlogin plogin \
-	rancid rblogin rivlogin rivrancid rrancid rtftpcopy tlogin \
-	trancid ulogin wlogin xilogin xirancid xlogin zrancid lg.cgi \
+	htrancid jerancid jlogin mrancid mrvlogin mtlogin nlogin \
+	noklogin nrancid nslogin nsrancid panlogin plogin rancid \
+	rblogin rivlogin rivrancid rrancid rtftpcopy tlogin trancid \
+	ulogin wlogin xilogin xirancid xlogin zrancid lg.cgi \
 	lgform.cgi rancid-cvs rancid-fe rancid-run
 # XXX hack for the rancid to get pkglibdir, see corresponding XXX below
 bin_in = control_rancid.in hrancid.in plogin.in rancid.in
@@ -497,8 +496,6 @@ jerancid: $(top_builddir)/config.status $(srcdir)/jerancid.in
 mrancid: $(top_builddir)/config.status $(srcdir)/mrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 mrvlogin: $(top_builddir)/config.status $(srcdir)/mrvlogin.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-mtrancid: $(top_builddir)/config.status $(srcdir)/mtrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 mtlogin: $(top_builddir)/config.status $(srcdir)/mtlogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
