--- a/configure.ac
+++ b/configure.ac
@@ -540,7 +540,7 @@ AC_CONFIG_FILES(bin/hlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/htlogin bin/htrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/jlogin bin/jerancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/mrancid bin/mrvlogin, [chmod a+x $ac_file])
-AC_CONFIG_FILES(bin/mtrancid bin/mtlogin, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/mtlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nlogin bin/nrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/noklogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nslogin bin/nsrancid, [chmod a+x $ac_file])
