--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -26,8 +26,7 @@ man_nogen_MANS = a10login.1 agmrancid.1 alogin.1 anlogin.1 \
 		rancid.types.base.5 rancid_intro.7 \
 		rblogin.1 rivlogin.1 rivrancid.1 \
 		router.db.5 rrancid.1 tlogin.1 ulogin.1 wlogin.1 \
-		xilogin.1 xlogin.1 xirancid.1 trancid.1 \
-		zrancid.1
+		xilogin.1 xlogin.1 xirancid.1 trancid.1
 
 man_MANS = $(man_nogen_MANS) $(man_gen_MANS)
 
