--- a/bin/avologin.in
+++ b/bin/avologin.in
@@ -3,7 +3,7 @@
 ## @PACKAGE@ @VERSION@
 @copyright@
 #
-# avologin - Avocent login
+# avologin - Vertiv ACS login (formerly Avocent (formerly Cyclades))
 #
 # Most options are intuitive for logging into a Avocent/Cyclades term server.
 # The default is to enable (thus -noenable).  Some folks have
@@ -258,10 +258,10 @@ proc run_commands { prompt command } {
 
     # match cisco config mode prompts too, such as router(config-if)#,
     # but catalyst does not change in this fashion.
-    regsub -lineanchor -- {^(.{1,14}).*([#>])$} $prompt {\1} reprompt
+    regsub -lineanchor -- {^(.{1,14}).*([#$])$} $prompt {\1} reprompt
     # escape any parens in the prompt, such as "(enable)"
     regsub -all {[)(]} $reprompt {\\&} reprompt
-    append reprompt {([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?}
+    append reprompt {([^#>\r\n]+)?[#$](\\([^)\\r\\n]+\\))?}
     expect {
 	-re $reprompt	{}
 	-re "\[\n\r]+"	{ exp_continue }
