--- a/lib/vertivacs.pm.in
+++ b/lib/vertivacs.pm.in
@@ -34,10 +34,6 @@ sub init {
     # add content lines and separators
     ProcessHistory("","","","#RANCID-CONTENT-TYPE: $devtype\n#\n");
 
-    ProcessHistory("COMMENTS","keysort","B0","!\n");
-    ProcessHistory("COMMENTS","keysort","D0","!\n");
-    ProcessHistory("COMMENTS","keysort","F0","!\n");
-    ProcessHistory("COMMENTS","keysort","G0","!\n");
     0;
 }
 
@@ -88,7 +84,7 @@ sub CatFile {
     my($catfile) = $cmd;
 
     $catfile =~ s/cat //;
-    ProcessHistory("COMMENTS","","","! $catfile\n");
+    ProcessHistory("COMMENTS","","","# $catfile:\n");
     while (<$INPUT>) {
 	tr/\015//d;
 	last if (/^$prompt/);
@@ -97,10 +93,57 @@ sub CatFile {
 
 	ProcessHistory("COMMENTS","","","$_");
     }
-    ProcessHistory("COMMENTS","","","!\n");
+    ProcessHistory("COMMENTS","","","#\n");
     if ($catfile eq "/etc/security.opts") {
 	$found_end = 1; $clean_run = 1;
     }
+    return(0);
+}
+
+# This routine parses "cat" w/ output commented
+sub CatFileComment {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+    print STDERR "    In CatFile: $_" if ($debug);
+    my($catfile) = $cmd;
+
+    $catfile =~ s/cat //;
+    ProcessHistory("COMMENTS","","","# $catfile:\n");
+    while (<$INPUT>) {
+	tr/\015//d;
+	last if (/^$prompt/);
+	next if (/^(\s*|\s*$cmd\s*)$/);
+	return(-1) if /: Permission denied/;
+
+	ProcessHistory("COMMENTS","","","# $_");
+    }
+    ProcessHistory("COMMENTS","","","#\n");
+    if ($catfile eq "/etc/security.opts") {
+	$found_end = 1; $clean_run = 1;
+    }
+    return(0);
+}
+
+# This routine parses "cat /proc/meminfo"
+sub Meminfo {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+    print STDERR "    In Meminfo: $_" if ($debug);
+    my($catfile) = $cmd;
+
+    $catfile =~ s/cat //;
+    ProcessHistory("COMMENTS","","","# $catfile:\n");
+    while (<$INPUT>) {
+	tr/\015//d;
+	last if (/^$prompt/);
+	next if (/^(\s*|\s*$cmd\s*)$/);
+	return(-1) if /: Permission denied/;
+
+	if (/memtotal:\s+(\d+.*)/i) {
+	    # MemTotal:       256944 kB
+	    my($size) = bytes2human(human2bytes($1));
+	    ProcessHistory("COMMENTS","","","# Memory: total $size\n");
+	}
+    }
+    ProcessHistory("COMMENTS","","","#\n");
     return(0);
 }
 
