Revert rename of avocent to vertiv; while vertiv consumed avocent, it is not clear to me that the vertiv ACS product is the same.

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ aeos.pm
 adtran.pm
 arbor.pm
 arcos.pm
+avocent.pm
 bigip.pm
 ciscowlc.pm
 dell.pm
@@ -139,7 +140,6 @@ rbt.pm
 smc.pm
 sros.pm
 vrp.pm
-vertivacs.pm
 wavesvros.pm
 
 cloginrc.5
