--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -273,12 +273,12 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 my_pkglibdir = $(pkglibdir)
-my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm arcos.pm \
+my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm arcos.pm avocent.pm \
 		 bigip.pm ciscowlc.pm \
 		 dell.pm dnos9.pm dnos10.pm edgemax.pm edgerouter.pm exos.pm \
 		 fortigate.pm foundry.pm frr.pm fss2.pm fxos.pm \
 		 ios.pm iossb.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
-		 panos.pm rbt.pm smc.pm sros.pm vertivacs.pm vrp.pm wavesvros.pm 
+		 panos.pm rbt.pm smc.pm sros.pm vrp.pm wavesvros.pm 
 
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 RANLIB = :
@@ -542,6 +542,7 @@ acos.pm: acos.pm.in
 aeos.pm: aeos.pm.in
 arbor.pm: arbor.pm.in
 arcos.pm: arcos.pm.in
+avocent.pm: avocent.pm.in
 bigip.pm: bigip.pm.in
 ciscowlc.pm: ciscowlc.pm.in
 dell.pm: dell.pm.in
@@ -568,7 +569,6 @@ panos.pm: panos.pm.in
 rbt.pm: rbt.pm.in
 smc.pm: smc.pm.in
 sros.pm: sros.pm.in
-vertivacs.pm: vertivacs.pm.in
 vrp.pm: vrp.pm.in
 wavesvros.pm: wavesvros.pm.in
 
