--- a/lib/avocent.pm.in
+++ b/lib/avocent.pm.in
@@ -44,10 +44,6 @@ sub inloop {
 
 TOP: while(<$INPUT>) {
 	tr/\015//d;
-	if (/[#\$] exit$/) {
-	    $clean_run = 1;
-	    last;
-	}
 	if (/^Error:/) {
 	    print STDOUT ("$host avologin error: $_");
 	    print STDERR ("$host avologin error: $_") if ($debug);
@@ -57,7 +53,7 @@ TOP: while(<$INPUT>) {
 	while (/[#\$]\s*($cmds_regexp)\s*$/) {
 	    $cmd = $1;
 	    if (!defined($prompt)) {
-		$prompt = ($_ =~ /^([^#\$]+[#\$] )/)[0];
+		$prompt = ($_ =~ /^([^#\$]+[#\$])/)[0];
 		$prompt =~ s/([][}{)(\\\$])/\\$1/g;
 		print STDERR ("PROMPT MATCH: $prompt\n") if ($debug);
 	    }
@@ -74,6 +70,10 @@ TOP: while(<$INPUT>) {
 		last TOP;
 	    }
 	}
+	if (/[#\$]\s*exit$/) {
+	    $clean_run = 1;
+	    last;
+	}
     }
 }
 
@@ -88,8 +88,8 @@ sub CatFile {
     while (<$INPUT>) {
 	tr/\015//d;
 	last if (/^$prompt/);
-	next if (/^(\s*|\s*$cmd\s*)$/);
-	return(-1) if /: Permission denied/;
+	eext if (/^(\s*|\s*$cmd\s*)$/);
+	return(-1) if (/: Permission denied/);
 
 	ProcessHistory("COMMENTS","","","$_");
     }
@@ -112,7 +112,7 @@ sub CatFileComment {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
-	return(-1) if /: Permission denied/;
+	return(-1) if (/: Permission denied/);
 
 	ProcessHistory("COMMENTS","","","# $_");
     }
@@ -135,7 +135,7 @@ sub Meminfo {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
-	return(-1) if /: Permission denied/;
+	return(-1) if (/: Permission denied/);
 
 	if (/memtotal:\s+(\d+.*)/i) {
 	    # MemTotal:       256944 kB
