--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -502,6 +502,7 @@ sub ShowInstallActive {
 
 	ProcessHistory("COMMENTS","keysort","F5","!Image: $_") && next;
     }
+    ProcessHistory("COMMENTS","keysort","F5","!\n") && next;
     return(0);
 }
 
@@ -584,7 +585,7 @@ sub ShowEnv {
 	    ProcessHistory("COMMENTS","keysort","E2","!Power: $1\n") && next;
     }
 OUT:
-    ProcessHistory("COMMENTS","","","!\n");
+    ProcessHistory("COMMENTS","keysort","E3","!\n");
     return(0);
 }
 
