Paste error in previous

--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -502,7 +502,7 @@ sub ShowInstallActive {
 
 	ProcessHistory("COMMENTS","keysort","F5","!Image: $_") && next;
     }
-    ProcessHistory("COMMENTS","keysort","F5","!\n") && next;
+    ProcessHistory("COMMENTS","keysort","F5","!\n");
     return(0);
 }
 
