--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -573,6 +573,22 @@ sub ShowEnv {
 	    }
 	    next;
 	}
+	if (/power shelf \d+:/i) {
+	    my($sep) = 0;
+	    ProcessHistory("COMMENTS","keysort","E1","!Power: $_");
+	    while (<$INPUT>) {
+		tr/\015//d;
+		goto OUT if (/^$prompt/);
+		last if (/^altitude information/i);
+		last if (/^=+$/i && ($sep > 1));
+		$sep++ if (/^=+$/i);
+		if (/^(\s+\S+\s+\S+-(?:AC|DC)\s+)(\S+\s+\S+\s+\S+\s+\S+)(\s+.*)/) {
+		    $_ = sprintf("%s%-". length($2) ."s%s\n", $1, "", $3);
+		}
+		ProcessHistory("COMMENTS","keysort","E1","!Power: $_");
+	    }
+	    next;
+	}
 	/^Power Supply Information$/ && next;
 	/^\s*Power Module\s+Voltage\s+Current$/ && next;
 	/^\s*(Power [^:\n]+)$/ &&
