--- a/bin/rancid-run.in
+++ b/bin/rancid-run.in
@@ -185,7 +185,7 @@ END
 	    exit 1
 	else
 	    trap 'rm -fr $LOCKFILE;exit 1' 1 2 3 6 10 15
-	    perl -e 'use POSIX;sysopen(FH, $ARGV[1], O_RDWR|O_CREAT|O_EXCL, 0660) or exit 1;print FH "$ARGV[0]\n";' -- $$ $LOCKFILE
+	    @PERLV@ -e 'use POSIX;sysopen(FH, $ARGV[1], O_RDWR|O_CREAT|O_EXCL, 0660) or exit 1;print FH "$ARGV[0]\n";' -- $$ $LOCKFILE
 	    if [ $? -eq 0 ] ; then
 		sh -c "control_rancid $CR_ARGV $GROUP"
 		trap ''  1 2 3 6 10 15
