junos.pm: jlocal hack and suppress license countdown

--- a/etc/rancid.types.conf
+++ b/etc/rancid.types.conf
@@ -12,6 +12,7 @@ jlocal;script;rancid -t jlocal
 jlocal;login;jlogin
 jlocal;module;junos
 jlocal;inloop;junos::inloop
+jlocal;command;junos::ShowSystemReboot;show system reboot
 jlocal;command;junos::ShowChassisClocks;show chassis clocks
 jlocal;command;junos::ShowChassisEnvironment;show chassis environment
 jlocal;command;junos::ShowChassisFirmware;show chassis firmware
