--- a/lib/junos.pm.in
+++ b/lib/junos.pm.in
@@ -444,6 +444,7 @@ sub ShowSystemLicense {
 	last if (/^$prompt/);
 	next if (/^system (shutdown message from|going down )/i);
 	next if (/^\{(master|backup|linecard|primary|secondary)(:(node)?\d+)?\}/);
+	next if (/ (days|hours|minutes)$/);
 	return -1 if (/error: select: protocol failure /i);
 	return -1 if (/error: abnormal communication /i);
 
@@ -453,6 +454,9 @@ sub ShowSystemLicense {
 	#                                  Licenses     Licenses    Licenses    Expiry
 	#   Feature name                       used    installed      needed
 	#   dynamic-vpn                           1            2           0    permanent
+	#   mx5-to-mx10-upgrade                   1            0           1    30 days
+	#   mx10-to-mx40-upgrade                  1            0           1    20 hours
+	#   mx40-to-mx80-upgrade                  1            0           1    10 minutes
 	if (/^(\s+(?:VMX|dynamic|mobile|scale|service|scale-subscriber|subscriber)-\S+)(\s+)(\d+)(\s+\d+)(.*$)/) {
 	    my($a, $sp, $used, $avail, $rem) = ($1, $2, $3, $4, $5);
 	    my($spl, $usedl) = (length($sp), length($used));
@@ -645,6 +649,31 @@ sub ShowConfiguration {
 	return(-1);
     }
 
+    return(0);
+}
+
+# This routine parses "show system reboot"
+sub ShowSystemReboot {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+    print STDERR "    In ShowSystemReboot: $_" if ($debug);
+
+    s/^[a-z]+@//;
+    ProcessHistory("","","","# $_");
+    while (<$INPUT>) {
+	tr/\015//d;
+	last if (/^$prompt/);
+	next if (/^system (shutdown message from|going down )/i);
+	next if (/^\{(master|backup|linecard|primary|secondary)(:(node)?\d+)?\}/);
+
+	/Unrecognized command/ && return(1);
+	/command is not valid/ && return(1);
+	/^\s+\^/ && return(1);
+	/syntax error/ && return(1);
+	/^JUNOS / && <$INPUT> && next;
+	/No such file or directory$/ && next;
+
+	ProcessHistory("","","","# $_");
+    }
     return(0);
 }
 
